updated shadow on slideout page
added startPage parameter to App.Navigator.init function

other minor tweaks

--- a/app/views/locations.xml
+++ b/app/views/locations.xml
@@ -11,6 +11,6 @@
 				<ImageView id="checkinBtn"></ImageView>
 			</View>
 		</View>
-		<View ns="Ti.Map" platform="ios"/>
+		<View ns="Ti.Map" />
 	</View>
 </Alloy>
