+ Percieved performance fix, Alloy.Globals.App.Navigator.open method now closes the menu if its visible when adding new views
+ menu events no longer bubble to the main menu view

+ some style tweaks and cleanup

--- a/app/views/briefcase.xml
+++ b/app/views/briefcase.xml
@@ -1,5 +1,7 @@
 <Alloy>
 	<View class="container">
-		<Label>Briefcase</Label>
+		<TableView id="tableView">
+			<Require src="briefcase_row" icon="music" filename="01track17"/>
+		</TableView>
 	</View>
 </Alloy>
