--- a/app/views/briefcase_row.xml
+++ b/app/views/briefcase_row.xml
@@ -4,7 +4,7 @@
 			<Widget id="filetype" class="icon black itemActionButton" src="net.hoyohoyo.iconiclabel" text="Like" icon="icon-file" touchEnabled="false" />
 			<Label id='filename'>Acme_Sales_Brochure.pdf</Label>
 			<Label id='timeAgo'>30 minutes ago</Label>
-			<Label id='status'>This is my status update.</Label>
+			<Label id='author'>This is my status update.</Label>
 			<View id='grayLine' bottom='51'></View>
 			<View id='bottomActions'>
 				<View class='itemActionButton'>
