--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -1,4 +1,42 @@
 <Alloy>
-	<View class="container">
+	<View class="container fill">
+		<View class="vgroup">
+			<ImageView id="profilePicture" class="top-buffer border-dark-thick square150" touchEnabled="false"/>
+			<View class="vgroup size">
+				<Label id="name" class='h3 white top-buffer' touchEnabled="false">Kelly Smith</Label>
+				<Label id="job" class='h4 white' touchEnabled="false">Account Rep</Label>
+			</View>
+			<ScrollableView>
+				<View class="vgroup size top-buffer">
+					<View class='hgroup redbkg size'>
+						<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-info-sign" />
+						<Label class="h3 white  left-buffer right-buffer">About</Label>
+					</View>
+					<Label id="profileBio" class="normal-text white left-buffer right-buffer top-buffer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</Label>
+				</View>
+				<View class="vgroup size top-buffer">
+					<View class='hgroup redbkg size'>
+						<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-map-marker" />
+						<Label class="h3 white left-buffer right-buffer">Location</Label>
+					</View>
+					<View id="mapview" class='buffer' ns="Ti.Map" animate="true" regionFit="true" userLocation="true" mapType="Ti.Map.STANDARD_TYPE" touchEnabled="false">
+
+						<!-- Annotations can be added dynamically based on Datasource -->
+						<Annotation id="map"
+						latitude="30.631256" longitude="-97.675422"
+						title="Home Office" subtitle="Georgetown, TX"
+						pincolor="Titanium.Map.ANNOTATION_RED"
+						myid="1"/>
+
+					</View>
+
+				</View>
+			</ScrollableView>
+		</View>
+		<View class="hgroup bottom size blackbkg">
+			<Widget id="facebookBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-facebook" />
+			<Widget id="twitterBtn"  class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-twitter" />
+			<Widget id="linkedinBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-linkedin" />
+		</View>
 	</View>
 </Alloy>
