--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -4,18 +4,37 @@
 			<ImageView id="profilePicture" class="top-buffer border-dark-thick square150" touchEnabled="false"/>
 			<View class="vgroup size">
 				<Label id="name" class='h3 white top-buffer' touchEnabled="false">Kelly Smith</Label>
-				<Label id="job" class='h4 white' touchEnabled="false">Account Rep</Label>
+				<Label id="job" class='h5 white' touchEnabled="false">Account Rep</Label>
+				<Label id="company" class='h5 white' touchEnabled="false">Appcelerator, Inc</Label>
 			</View>
-			<ScrollableView>
+			<ScrollableView class="top-buffer" showPagingControl="true">
 				<View class="vgroup size top-buffer">
-					<View class='hgroup redbkg size'>
+					<View class='hgroup redbkg span-width'>
+						<Widget class="icon small-text white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-info-sign" />
+						<Label class="h3 white  left-buffer right-buffer">Contact Info</Label>
+					</View>
+					<View class='hgroup size top-buffer left-buffer'>
+						<Widget class=" small-text icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-phone" />
+						<Label class="white  left-buffer right-buffer">512-555-1212</Label>
+					</View>
+					<View class='hgroup size top-buffer left-buffer'>
+						<Widget class="icon small-text white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-envelope-alt" />
+						<Label class="white  left-buffer right-buffer">kelly.smith@appcelerator.com</Label>
+					</View>
+					<View class='hgroup size top-buffer left-buffer'>
+						<Widget class="icon small-text white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-comment" />
+						<Label class="white  left-buffer right-buffer">kelly.smith</Label>
+					</View>
+				</View>
+				<View class="vgroup size top-buffer" >
+					<View class='hgroup redbkg span-width'>
 						<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-info-sign" />
 						<Label class="h3 white  left-buffer right-buffer">About</Label>
 					</View>
 					<Label id="profileBio" class="normal-text white left-buffer right-buffer top-buffer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</Label>
 				</View>
 				<View class="vgroup size top-buffer">
-					<View class='hgroup redbkg size'>
+					<View class='hgroup redbkg span-width'>
 						<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-map-marker" />
 						<Label class="h3 white left-buffer right-buffer">Location</Label>
 					</View>
@@ -25,7 +44,7 @@
 						<Annotation id="map"
 						latitude="30.631256" longitude="-97.675422"
 						title="Home Office" subtitle="Georgetown, TX"
-						pincolor="Titanium.Map.ANNOTATION_RED"
+						pincolor="Titanium.Map.ANNOTATION_RED" 
 						myid="1"/>
 
 					</View>
@@ -37,6 +56,10 @@
 			<Widget id="facebookBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-facebook" />
 			<Widget id="twitterBtn"  class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-twitter" />
 			<Widget id="linkedinBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-linkedin" />
+		</View>
+		<View class="vgroup size right top">
+			<Widget id="addContactBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-plus" />
+			<Widget id="shareContactBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-share" />
 		</View>
 	</View>
 </Alloy>
