--- a/app/views/menu.xml
+++ b/app/views/menu.xml
@@ -1,9 +1,9 @@
 <Alloy>
 	<View class="container">
-		<View id="btnProfile" class="menuHeader" page="profile">
-			<View class="headerBackground" touchEnabled="false" />
-			<Widget class="menuHeaderIcon" src="net.hoyohoyo.iconiclabel" icon="icon-user" touchEnabled="false" />
-			<Label class="white profile" touchEnabled="false">My Profile</Label>
+		<View id="btnProfile" class="span-width top" page="profile">
+			<View class="menu-btn-background" touchEnabled="false" />
+			<Widget class="size menuHeaderIcon" src="net.hoyohoyo.iconiclabel" icon="icon-user" touchEnabled="false" />
+			<Label class="size white profile" touchEnabled="false">My Profile</Label>
 		</View>
 		<TableView id="tableView" class="container">
 			<TableViewSection headerView="menuSectionHeader">
@@ -29,10 +29,12 @@
 				</TableViewRow>
 			<TableViewSection>
 		</TableView>
-		<View id="btnSettings" class="footer" page="settings">
-			<View class="footer-background" touchEnabled="false"/>
-			<Widget class="menuHeaderIcon" src="net.hoyohoyo.iconiclabel" icon="icon-cog" touchEnabled="false"/>
-			<Label class="white profile" touchEnabled="false">Settings</Label>
+		<View id="settingsView" class="vgroup footer" zIndex='1000'>
+			<View id="settingsBtn" class="span-width">
+				<View id="footerBkg" class="menu-btn-background" touchEnabled="false"/>
+				<Widget class="size menuHeaderIcon" src="net.hoyohoyo.iconiclabel" icon="icon-cog" touchEnabled="false"/>
+				<Label class="size white profile" touchEnabled="false">Settings</Label>
+			</View>
 		</View>
 	</View>
 </Alloy>
