fixes for orientation and menus
added Grid System from Alloy Boostrap (profile, menu and basic elements on index

android ui fixes

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -1,5 +1,5 @@
 <Alloy>
 	<View class="container">
-		<WebView url="http://www.appcelerator.com" />
+		<WebView url="http://www2.appcelerator.com" />
 	</View>
 </Alloy>
