--- a/app/views/menu.xml
+++ b/app/views/menu.xml
@@ -5,7 +5,7 @@
 			<Widget class="size menuHeaderIcon" src="net.hoyohoyo.iconiclabel" icon="icon-user" touchEnabled="false" />
 			<Label class="size white profile" touchEnabled="false">My Profile</Label>
 		</View>
-		<TableView id="tableView" class="container">
+		<TableView id="tableView">
 			<TableViewSection headerView="menuSectionHeader">
 				<TableViewRow className="menuRow" page="home">
 					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-home"/>
@@ -29,12 +29,10 @@
 				</TableViewRow>
 			<TableViewSection>
 		</TableView>
-		<View id="settingsView" class="vgroup footer" zIndex='1000'>
-			<View id="settingsBtn" class="span-width">
-				<View id="footerBkg" class="menu-btn-background" touchEnabled="false"/>
-				<Widget class="size menuHeaderIcon" src="net.hoyohoyo.iconiclabel" icon="icon-cog" touchEnabled="false"/>
-				<Label class="size white profile" touchEnabled="false">Settings</Label>
-			</View>
+		<View id="settingsBtn" class="span-width" page="settings">
+			<View id="footerBkg" class="menu-btn-background" touchEnabled="false"/>
+			<Widget class="size menuHeaderIcon" src="net.hoyohoyo.iconiclabel" icon="icon-cog" touchEnabled="false"/>
+			<Label class="size white profile" touchEnabled="false">Settings</Label>
 		</View>
 	</View>
 </Alloy>
