--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -1,13 +1,13 @@
 <Alloy>
 	<View class="container fill">
-		<View class="vgroup">
-			<ImageView id="profilePicture" class="top-buffer border-dark-thick square150" touchEnabled="false"/>
-			<View class="vgroup size">
+		<View class="vgroup rowspan8">
+			<ImageView id="profilePicture" class="rowspan2" touchEnabled="false"/>
+			<View class="vgroup size rowspan2">
 				<Label id="name" class='h3 white top-buffer' touchEnabled="false">Kelly Smith</Label>
 				<Label id="job" class='h5 white' touchEnabled="false">Account Rep</Label>
 				<Label id="company" class='h5 white' touchEnabled="false">Appcelerator, Inc</Label>
 			</View>
-			<ScrollableView class="top-buffer" showPagingControl="true">
+			<ScrollableView class="top-buffer rowspan4" showPagingControl="true" platform="android,ios">
 				<View class="vgroup size top-buffer">
 					<View class='hgroup redbkg span-width'>
 						<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-qrcode" />
@@ -57,11 +57,6 @@
 						
 				</View>
 			</ScrollableView>
-		</View>
-		<View class="hgroup bottom size blackbkg">
-			<Widget id="facebookBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-facebook" />
-			<Widget id="twitterBtn"  class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-twitter" />
-			<Widget id="linkedinBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-linkedin" />
 		</View>
 		<View class="vgroup size right top">
 			<Widget id="addContactBtn" class="icon white profileBtn" src="net.hoyohoyo.iconiclabel"  icon="icon-plus" />
