--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -1,8 +1,8 @@
 <Alloy>
 	<View class="container fill">
-		<View class="vgroup rowspan8">
+		<View class="vgroup">
 			<ImageView id="profilePicture" class="top-buffer" touchEnabled="false"/>
-			<View class="vgroup size rowspan2">
+			<View class="vgroup size">
 				<Label id="name" class='h3 white top-buffer' touchEnabled="false">Kelly Smith</Label>
 				<Label id="job" class='h5 white' touchEnabled="false">Account Rep</Label>
 				<Label id="company" class='h5 white' touchEnabled="false">Appcelerator, Inc</Label>
@@ -60,8 +60,8 @@
 				</View>
 			</ScrollableView>
 			<View class="buffer vgroup" formFactor="tablet">
-				<View class="hgroup size">
-					<View class="vgroup size top-buffer">
+				<View class="size">
+					<View id="contactInfo" class="vgroup size top-buffer">
 						<View class='hgroup redbkg size'>
 							<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-qrcode" />
 							<Label class="h3 white  left-buffer right-buffer">Contact Info</Label>
@@ -79,15 +79,15 @@
 							<Label class="white  left-buffer right-buffer">kelly.smith</Label>
 						</View>
 					</View>
-					<View class="vgroup size top-buffer" >
-						<View class='hgroup redbkg size right-buffer'>
+					<View id="about" class="vgroup size top-buffer right-buffer" >
+						<View class='hgroup redbkg size'>
 							<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-info-sign" />
-							<Label class="h3 white  left-buffer right-buffer">About</Label>
+							<Label class="h3 white left-buffer right-buffer">About</Label>
 						</View>
 						<Label id="profileBio" class="normal-text white left-buffer right-buffer top-buffer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</Label>
 					</View>
 				</View>
-				<View class="vgroup size top-buffer bottonm-buffer">
+				<View id="location" class="vgroup size top-buffer bottonm-buffer">
 					<View class='hgroup redbkg span-width'>
 						<Widget class="icon white left-buffer" src="net.hoyohoyo.iconiclabel"  icon="icon-map-marker" />
 						<Label class="h3 white left-buffer right-buffer">Location</Label>
