changing where i am setting the window widths - moving to the index.js vs in slidemenu, it just makes more sense
making Andriod window fullscreen to account for orientation change event not working on older versions of android

found really annoying bug that was scaling the menu item heights to 80% - super typo!

settings screen wasn't showing up on android because it didn't have any styles - duh

removed class size on TableView rows because if fixed that annoying bug as mentioned 3 rows up

--- a/app/views/menu.xml
+++ b/app/views/menu.xml
@@ -7,22 +7,22 @@
 		</View>
 		<TableView id="tableView">
 			<TableViewSection headerView="menuSectionHeader">
-				<TableViewRow class="size" className="menuRow" page="home">
+				<TableViewRow className="menuRow" page="home">
 					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-home"/>
 					<Label class="size" >Home</Label>
 					<View class="white-line transparent" />
 				</TableViewRow>
-				<TableViewRow class="size" className="menuRow" page="briefcase">
+				<TableViewRow className="menuRow" page="briefcase">
 					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-briefcase"/>
 					<Label class="size" >Briefcase</Label>
 					<View class="white-line transparent" />
 				</TableViewRow>
-				<TableViewRow class="size" className="menuRow" page="locations">
+				<TableViewRow className="menuRow" page="locations">
 					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-map-marker" />
 					<Label class="size" >Locations</Label>
 					<View class="white-line transparent" />
 				</TableViewRow>
-				<TableViewRow class="size" className="menuRow" page="photos">
+				<TableViewRow className="menuRow" page="photos">
 					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-picture" />
 					<Label class="size" >Photos</Label>
 					<View class="white-line transparent" />
