--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -1,5 +1,6 @@
 <Alloy>
 	<View class="container">
-		<WebView url="http://www2.appcelerator.com" />
+		<WebView url="http://www.appcelerator.com" />
+		<!--<WebView url="https://ebiznet.sbc.com/oxygen/mobile/index.html" />-->
 	</View>
 </Alloy>
