--- a/app/views/locations.xml
+++ b/app/views/locations.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<View>
+	<View class="container">
 		<View ns="Ti.Map" id="mapview" />
 		<TextField id="addressField" onReturn="onReturn" />
 		<Widget class="icon" src="net.hoyohoyo.iconiclabel" icon="icon-search" onClick="onReturn"/>
