updates to use googleAPI module
blackberry theme defined to oldschool - need to refine this to work better

need to add images for blackberry

--- a/app/views/menu.xml
+++ b/app/views/menu.xml
@@ -49,6 +49,11 @@ There is a lot going on here, so lets break it down into basics.
 					<Label class="size" >Locations</Label>
 					<View class="white-line transparent" />
 				</TableViewRow>
+				<TableViewRow className="menuRow" page="dashboard">
+					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-dashboard"/>
+					<Label class="size" >Dashboard</Label>
+					<View class="white-line transparent" />
+				</TableViewRow>
 			<TableViewSection>
 		</TableView>
 		<!--
