--- a/app/views/menu.xml
+++ b/app/views/menu.xml
@@ -34,6 +34,11 @@ There is a lot going on here, so lets break it down into basics.
 		-->
 		<TableView id="tableView">
 			<TableViewSection headerView="menuSectionHeader">
+				<TableViewRow className="menuRow" page="home">
+					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-home"/>
+					<Label class="size" >Home</Label>
+					<View class="white-line transparent" />
+				</TableViewRow>
 				<TableViewRow className="menuRow" page="calendar">
 					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-money"/>
 					<Label class="size" >Expenses</Label>
@@ -47,11 +52,6 @@ There is a lot going on here, so lets break it down into basics.
 				<TableViewRow className="menuRow" page="locations">
 					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-map-marker" />
 					<Label class="size" >Locations</Label>
-					<View class="white-line transparent" />
-				</TableViewRow>
-				<TableViewRow className="menuRow" page="dashboard">
-					<Widget class="menuIcon" src="net.hoyohoyo.iconiclabel" icon="icon-dashboard"/>
-					<Label class="size" >Dashboard</Label>
 					<View class="white-line transparent" />
 				</TableViewRow>
 			<TableViewSection>
