fixed problem with the expenses / calendar mismatch on the menu
updated briefcase - favorite and comment buttons now toggle

fixed issue where font was being reset to null on MobileWeb in briefcase

--- a/app/views/briefcase_row.xml
+++ b/app/views/briefcase_row.xml
@@ -1,16 +1,16 @@
 <Alloy>
 	<TableViewRow id='listRow'>
 		<View id='rowContainer'>
-			<Widget id="filetype" class="icon itemActionButton no-touch" src="net.hoyohoyo.iconiclabel" text="Like" icon="icon-file" />
+			<Widget id="filetype" class="icon itemActionButton no-touch" src="net.hoyohoyo.iconiclabel" icon="icon-file" />
 			<Label id='filename'>Acme_Sales_Brochure.pdf</Label>
 			<Label id='timeAgo'>30 minutes ago</Label>
 			<Label id='author'>This is my status update.</Label>
 			<View id='grayLine' bottom='51'></View>
 			<View id='bottomActions'>
-				<View class='itemActionButton'>
+				<View class='itemActionButton' onClick="favoriteClickHandler">
 					<Widget id="favoriteBtn" class="icon red itemActionButton no-touch" src="net.hoyohoyo.iconiclabel" icon="icon-star-empty"  />
 				</View>
-				<View  class='itemActionButton'>
+				<View  class='itemActionButton' onClick="commentClickHandler">
 					<Widget id="commentBtn" class="icon red itemActionButton no-touch" src="net.hoyohoyo.iconiclabel" icon="icon-comment-alt"  />
 				</View>
 			</View>
